added code to perform cluster analysis for generating profiles

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 data/playstore_scraper/node_modules/
 data/workspace_img.RData
 docs/SAMSHA Codebook Abridged.docx
+data/.Rhistory
+data/NSDUH-2014-DS0001-data-r.rda
+source/.Rhistory
