Don't know what this is

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ docs/SAMSHA Codebook Abridged.docx
 data/.Rhistory
 data/NSDUH-2014-DS0001-data-r.rda
 source/.Rhistory
+data/appstore_scraper/node_modules/
